slider overflow bug fix, waypoint adjustments
Fixed waypoints after rearranging portfolio listings, fixed bug where
slider overflows over content on large screen sizes over 1500px

--- a/style.css
+++ b/style.css
@@ -1847,6 +1847,12 @@ and (min-width : 400px) and (max-width : 500px) {
 }
 }
 
+@media screen and (min-width: 1500px) {
+    #recent.recent.portfolio-section {
+        margin-top: 550px !important;
+    }
+}
+
 @media only screen
 and (max-width : 500px) {
 .navbar {
